fix(button): correct vertical align for icon groups within buttons

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -615,15 +615,14 @@
 .ui.button > .icon:not(.button) {
   height: @iconHeight;
   opacity: @iconOpacity;
-  margin: @iconMargin;
   transition: @iconTransition;
-  vertical-align: @iconVerticalAlign;
   color: @iconColor;
 }
 
 .ui.button:not(.icon) > .icon:not(.button):not(.dropdown),
 .ui.button:not(.icon) > .icons:not(.button):not(.dropdown) {
   margin: @iconMargin;
+  vertical-align: @iconVerticalAlign;
 }
 .ui.button:not(.icon) > .right.icon:not(.button):not(.dropdown) {
   margin: @rightIconMargin;
